<resources>
    <string name="app_name">Psyche</string>
    <string name="increasing_the_strength_of_our_minds_is_the_only_way_to_reduce_the_difficulty_of_life_mokokoma">“Increasing the strength of our minds is the only way to reduce the difficulty of life.” ― Mokokoma</string>
    <string name="psyche">psyche</string>
    <string name="i_already_have_an_account">I ALREADY HAVE AN ACCOUNT</string>
    <string name="get_started">GET STARTED</string>
    <string name="title_activity_onboarding_screen">OnboardingScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="to_love_oneself_is_the_beginning_of_a_lifelong_romance_oscar_wilde">"To love oneself is the beginning of a lifelong romance." — Oscar Wilde</string>
    <string name="onboarding_message">is built to prioritize college students. We provide a platform for students to take time to focus on and prioritize their mental health and well-being. We\'ll have you answer a series of questions now to get a better idea of what activities you would be most interested in. </string>
    <string name="_continue_">CONTINUE</string>
    <string name="title_activity_questionnaire">Questionnaire</string>
    <string name="custom_experience_questionnaire">Please answer the following questions to help us customize your experience.</string>
    <string name="i_am_interested_in_socializing">I am interested in socializing virtually with other Psyche users</string>
    <string name="strongly_agree">Strongly Agree</string>
    <string name="strongly_disagree">Strongly Disagree</string>
    <string name="i_believe_that_having_scheduled_activities_such_as_meditation">I believe that having scheduled activities such as meditation or exercise is beneficial to my mental health.</string>
    <string name="new_hobbies_through_psyche">I am interested in learning new skills or being introduced to new hobbies through Psyche</string>
    <string name="title_activity_select_goal">SelectGoal</string>
    <string name="pick_a_goal">Pick a goal.</string>
    <string name="your_goal_is_how_many_challenges_you_are_planning_on_completing_in_the_allotted_time_span">Your goal is how many challenges you are planning on completing in the allotted time span.</string>
    <string name="_3_per_month">3 per month</string>
    <string name="determined">Determined</string>
    <string name="casual">Casual</string>
    <string name="intense">Intense</string>
    <string name="champion">Champion</string>
    <string name="_1_per_week">1 per week</string>
    <string name="_2_per_week">2 per week</string>
    <string name="_1_per_month">1 per month</string>
    <string name="title_activity_profile">Profile</string>
    <string name="college">College</string>
    <string name="set_up_your">Set up your</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="profile">profile.</string>
    <string name="your_profile_will_help_us_personalize_your_challenges_and_track_your_progression_over_time">Your profile will help us personalize your challenges and track your progression over time.</string>
    <string name="begin_your_journey">Begin your journey</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search</string>
    <string name="challenges">Challenges</string>
    <string name="goals">Goals</string>
    <string name="achievements">Achievements</string>
    <string name="settings">Settings</string>
    <string name="open_nav">Open Nav</string>
    <string name="close_nav">Close Nav</string>
    <string name="difficulty_easy_length_3_weeks"><b>Difficulty:</b> Easy Length: 3 Weeks</string>
</resources>