<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="310dp"
        android:layout_height="93dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="225dp"
        android:layout_height="63dp"
        android:fontFamily="@font/nunito_extralight"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/to_love_oneself_is_the_beginning_of_a_lifelong_romance_oscar_wilde"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="158dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nova_square"
        android:text="@string/psyche"
        android:textColor="#ff4d4d"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="305dp"
        android:layout_height="180dp"
        android:fontFamily="@font/nunito_extralight"
        android:text="@string/onboarding_message"
        android:textFontWeight="1000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/textView4"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <Button
        android:id="@+id/openQuestionnaire"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:backgroundTint="#FF4d4d"
        android:elevation="4dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/_continue_"
        android:textFontWeight="1000"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>