<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="141dp"
        android:layout_height="52dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="99dp"
        android:layout_height="29dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nunito_sans"
        android:gravity="center_vertical"
        android:text="@string/pick_a_goal"
        android:textFontWeight="1000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/nunito_extralight"
        android:gravity="center_vertical"
        android:text="@string/your_goal_is_how_many_challenges_you_are_planning_on_completing_in_the_allotted_time_span"
        android:textFontWeight="1000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/rectangle_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView7" />

    <View
        android:id="@+id/rectangle_6"
        android:layout_width="320dp"
        android:layout_height="260dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView8" />

    <View
        android:id="@+id/view4"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tableLayout" />

    <View
        android:id="@+id/view2"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tableLayout3" />

    <View
        android:id="@+id/view3"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tableLayout2" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="320dp"
        android:layout_height="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rectangle_6">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="125dp"
                android:fontFamily="@font/nunito_sans"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/casual"
                android:textFontWeight="1000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:fontFamily="@font/nunito_sans"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/_1_per_month"
                android:textFontWeight="1000"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="320dp"
        android:layout_height="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="120dp"
                android:fontFamily="@font/nunito_sans"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/intense"
                android:textFontWeight="1000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:fontFamily="@font/nunito_sans"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/_1_per_week"
                android:textFontWeight="1000"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="320dp"
        android:layout_height="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view4">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="88dp"
                android:fontFamily="@font/nunito_sans"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/determined"
                android:textFontWeight="1000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:fontFamily="@font/nunito_sans"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/_3_per_month"
                android:textFontWeight="1000"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout4"
        android:layout_width="320dp"
        android:layout_height="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="95dp"
                android:fontFamily="@font/nunito_sans"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/champion"
                android:textFontWeight="1000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:fontFamily="@font/nunito_sans"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/_2_per_week"
                android:textFontWeight="1000"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/continue_button2"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#FF4d4d"
        android:elevation="4dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/_continue_"
        android:textFontWeight="1000"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rectangle_6" />

</androidx.constraintlayout.widget.ConstraintLayout>