<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpeningScreen">

    <Button
        android:id="@+id/newUser"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:backgroundTint="#FF4d4d"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/get_started"
        android:textFontWeight="1000"
        android:textSize="18sp"
        android:elevation="4dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nova_square"
        android:text="@string/psyche"
        android:textColor="#FF4D4D"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="127dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/nunito_extralight"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/increasing_the_strength_of_our_minds_is_the_only_way_to_reduce_the_difficulty_of_life_mokokoma"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/newUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/i_already_have_an_account"
        android:textColor="#FF4d4d"
        android:textFontWeight="1000"
        app:cornerRadius="20dp"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUser"
        app:strokeColor="#FF4D4D"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>